--- a/smartlivestock/smartlivestock/Views/Shared/_Layout.cshtml
+++ b/smartlivestock/smartlivestock/Views/Shared/_Layout.cshtml
@@ -171,9 +171,9 @@
                                         <a class="dropdown-item" asp-area="" asp-controller="Trainingvideos" asp-action="Index">Videos</a>
                                         <a class="dropdown-item" asp-area="" asp-controller="User" asp-action="Index">User</a>
                                         <a class="dropdown-item" asp-area="" asp-controller="FacilityRegistries" asp-action="Index">Facility Register</a>
-                                       
+                                        <a class="dropdown-item" asp-area="" asp-controller="Species" asp-action="Index">Species</a>
                                         <a class="dropdown-item" asp-area="" asp-controller="Advices" asp-action="Index">Advice</a>
-                                         <a class="dropdown-item" asp-area="" asp-controller="ChiefComplaints" asp-action="Index">Cief Complaints</a>
+                                        <a class="dropdown-item" asp-area="" asp-controller="ChiefComplaints" asp-action="Index">Clinical signs</a>
                                          <a class="dropdown-item" asp-area="" asp-controller="Diagnoses" asp-action="Index">Diagnoses</a>
                                          <a class="dropdown-item" asp-area="" asp-controller="FlowUps" asp-action="Index">FlowUps</a>
                                          <a class="dropdown-item" asp-area="" asp-controller="GeneralExaminations" asp-action="Index">General Examinations</a>
@@ -187,7 +187,7 @@
                             </li>
                             <li class="nav-item">
                                 
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Registrations" asp-action="Index">Patients</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Registrations" asp-action="Index">Woners</a>
                             </li>
                         
 
