--- a/smartlivestock/smartlivestock/Views/ShortNotes/Edit.cshtml
+++ b/smartlivestock/smartlivestock/Views/ShortNotes/Edit.cshtml
@@ -4,41 +4,32 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<div class="container mt-4">
+    <h2 class="text-center text-primary">EDIT SHORTNOTE</h2>
 
-<h4>ShortNote</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
+    <div class="row justify-content-center">
+        <form asp-action="Create" class="col-12 col-md-8 col-lg-6 bg-light bg-gradient p-4 border" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="ShortId" />
+
             <div class="form-group">
                 <label asp-for="ShortNoteName" class="control-label"></label>
                 <input asp-for="ShortNoteName" class="form-control" />
                 <span asp-validation-for="ShortNoteName" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="SrUser" class="control-label"></label>
-                <input asp-for="SrUser" class="form-control" />
-                <span asp-validation-for="SrUser" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ShortDt" class="control-label"></label>
-                <input asp-for="ShortDt" class="form-control" />
-                <span asp-validation-for="ShortDt" class="text-danger"></span>
-            </div>
+            <br />
+
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
+                <a asp-action="Index" class="btn btn-primary">Back</a>
             </div>
+
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
