--- a/smartlivestock/smartlivestock/Views/Registrations/Details.cshtml
+++ b/smartlivestock/smartlivestock/Views/Registrations/Details.cshtml
@@ -6,17 +6,17 @@
 
 
 <div>
-    <h4>Patients Informations</h4>
+    <h4>Woner Informations</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ReName)
+            Woner Name
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.ReName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PtnId)
+           Woner Id
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.PtnId)
@@ -40,13 +40,13 @@
             @Html.DisplayFor(model => model.Ages)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CreateDAte)
+           Create Date
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.CreateDAte)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.UsrName)
+           User Name
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.UsrName)
