--- a/smartlivestock/smartlivestock/Views/Registrations/Edit.cshtml
+++ b/smartlivestock/smartlivestock/Views/Registrations/Edit.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="container mt-4">
-    <h2 class="text-center text-primary">EDIT PATIENTS</h2>
+    <h2 class="text-center text-primary">EDIT WONER</h2>
 
     <div class="row justify-content-center">
         <form asp-action="Edit" class="col-12 col-md-3 col-lg-6 bg-light bg-gradient p-4 border" enctype="multipart/form-data">
@@ -13,13 +13,13 @@
             <input type="hidden" asp-for="RegiId" />
             <input type="hidden" asp-for="PtnId" />
             <div class="form-group">
-                <label asp-for="ReName" class="control-label"></label>
+                <label asp-for="ReName" class="control-label">Woner Name</label>
                 <input asp-for="ReName" class="form-control" />
                 <span asp-validation-for="ReName" class="text-danger"></span>
             </div>
 
             <div class="form-group">
-                <label asp-for="Phone" class="control-label"></label>
+                <label asp-for="Phone" class="control-label">Phone Number</label>
                 <input asp-for="Phone" class="form-control" />
                 <span asp-validation-for="Phone" class="text-danger"></span>
             </div>
