--- a/smartlivestock/smartlivestock/Views/Prescriptions/Create.cshtml
+++ b/smartlivestock/smartlivestock/Views/Prescriptions/Create.cshtml
@@ -398,7 +398,7 @@
                                                
                                                  <input name="Prescriptions[${index}].Duration" type="number" min="1" max="31" step="1" value="1" style="width: 3em;" />
 
-                                                 <select name="SinglePrescrip.TypeOfAge" style="width:4em;">
+                                                     <select name="Prescriptions[${index}].DurationType" style="width:4em;">
                                                     <option value="দিন">দিন</option>
                                                     <option value="সপ্তাহ">সপ্তাহ</option>
                                                     <option value="মাস">মাস</option>
